--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -11,13 +11,13 @@
     margin-right: 15px;
 }
 
-button{
+.main-button{
     width: 200px;
     background-color: gold;
     border-radius: 5px;
     border: 1px solid goldenrod;
+   cursor: pointer;
 }
-
 h4{
     color: blue;
 }
